--- a/master/common.yaml
+++ b/master/common.yaml
@@ -2,7 +2,8 @@ jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://master:8080'
 
-# master::ip: 54.67.30.249
+master::ip: 54.67.30.249
+repo::ip: 54.67.51.1
 
 user::admin::name: admin
 
@@ -49,4 +50,4 @@ jenkins::private_ssh_key: |
 
 
 autoreconfigure: false
-autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin && git reset --hard && ./reconfigure.bash master"'
+autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin && git reset --hard origin/master && ./reconfigure.bash master"'
