--- a/slave/common.yaml
+++ b/slave/common.yaml
@@ -1,7 +1,7 @@
 jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://master:8080'
-
+jenkins::slave::num_executors: 1
 
 # master::ip: 54.67.30.249
 # repo::ip: 54.67.51.1
