--- a/repo/common.yaml
+++ b/repo/common.yaml
@@ -103,21 +103,162 @@ jenkins-slave::reprepro_updater_config: |
     distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid
     repository_path: /var/repos/ubuntu/building
     signing_key: E5944336
-    upstream_config: /home/jenkins-slave/reprepro-updater/config
+    upstream_config: /home/jenkins-slave/reprepro_config
 
     [ubuntu_testing]
     architectures: amd64 armhf i386 source
     distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid
     repository_path: /var/repos/ubuntu/testing
     signing_key: E5944336
-    upstream_config: /home/jenkins-slave/reprepro-updater/config
+    upstream_config: /home/jenkins-slave/reprepro_config
 
     [ubuntu_main]
     architectures: amd64 armhf i386 source
     distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid
     repository_path: /var/repos/ubuntu/main
     signing_key: E5944336
-    upstream_config: /home/jenkins-slave/reprepro-updater/config
+    upstream_config: /home/jenkins-slave/reprepro_config
+
+jenkins-slave::reprepro_config:
+    '/home/jenkins-slave/reprepro_config/ros_public_bootstrap.yaml':
+        ensure: 'present'
+        content: |
+            name: ros_public_bootstrap
+            method: http://repos.ros.org/repos/ros/ubuntu
+            suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty, utopic, vivid]
+            component: main
+            architectures: [i386, amd64, armel, armhf, source]
+            filter_formula: Package (% python* )
+            # needed until we deploy the gpg key
+            verify_release: blindtrust
+    '/home/jenkins-slave/reprepro_config/empy_saucy.yaml':
+        ensure: 'present'
+        content: |
+            name: empy_saucy
+            method: http://packages.osrfoundation.org/gazebo/ubuntu
+            suites: [saucy]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% python3-empy)
+    '/home/jenkins-slave/reprepro_config/empy_trusty.yaml':
+        ensure: 'present'
+        content: |
+            name: empy_trusty
+            method: http://packages.osrfoundation.org/gazebo/ubuntu
+            suites: [trusty]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% python-empy ) | Package (% python3-empy)
+    '/home/jenkins-slave/reprepro_config/bullet_precise.yaml':
+        ensure: 'present'
+        content: |
+            name: bulletppa
+            method: http://ppa.launchpad.net/blk/ppa/ubuntu/
+            suites: [precise]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% *libbullet* )
+    '/home/jenkins-slave/reprepro_config/namniart_armhf_trusty.yaml':
+        ensure: 'present'
+        content: |
+            name: namniart_armhf_bootstrap
+            # method: http://packages.namniart.com/repos/ros_support/
+            method: http://23.239.1.142/repos/ros_support/
+            suites: [trusty]
+            component: main
+            architectures: [armhf]
+            filter_formula: '(Package (% * ), !Package (% openni2-doc*), !Package(% libpcl-1.7-all*), !Package(% libpcl-1.7-doc*))'
+            # needed until we deploy the gpg key
+            verify_release: blindtrust
+    '/home/jenkins-slave/reprepro_config/ceres.yaml':
+        ensure: 'present'
+        content: |
+            name: ceres
+            method: http://ppa.launchpad.net/mikeferguson/ceres-solver/ubuntu
+            suites: [trusty, utopic, vivid]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (== ceres-solver ) | Package (% libceres ) | Package (% libceres-dev )
+    '/home/jenkins-slave/reprepro_config/catkinlint.yaml':
+        ensure: 'present'
+        content: |
+            name: catkinlint
+            method: http://ppa.launchpad.net/roehling/latest/ubuntu
+            suites: [precise, quantal, raring, saucy, trusty, utopic, vivid]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (== catkin-lint ) | Package (== python-catkin-lint)
+    '/home/jenkins-slave/reprepro_config/catkinlint.yaml':
+        ensure: 'present'
+        content: |
+            name: urdfdom_import
+            method: http://packages.osrfoundation.org/gazebo/ubuntu
+            suites: [saucy]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% libconsole-bridge* ) | Package (% liburdfdom* ) | Package (== urdfdom) | Package (== console-bridge)
+    '/home/jenkins-slave/reprepro_config/urdfdom.yaml':
+        ensure: 'present'
+        content: |
+            name: urdfdom_import
+            method: http://packages.osrfoundation.org/gazebo/ubuntu
+            suites: [saucy]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% libconsole-bridge* ) | Package (% liburdfdom* ) | Package (== urdfdom) | Package (== console-bridge)
+    '/home/jenkins-slave/reprepro_config/qtsixa.yaml':
+        ensure: 'present'
+        content: |
+            name: qtsixa
+            method: http://ppa.launchpad.net/falk-t-j/qtsixa/ubuntu
+            # For now only import saucy, trusty. PQR have patched versions for openni compatibility
+            # suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty]
+            suites: [saucy, trusty]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (== qtsixa ) | Package (== sixad)
+    '/home/jenkins-slave/reprepro_config/pcl.yaml':
+        ensure: 'present'
+        content: |
+            name: pclppa
+            method: http://ppa.launchpad.net/v-launchpad-jochen-sprickerhof-de/pcl/ubuntu
+            # For now only import saucy, trusty. PQR have patched versions for openni compatibility
+            # suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty]
+            suites: [saucy, trusty]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% *openni2* ) | Package (% *pcl*-1.7* )
+    '/home/jenkins-slave/reprepro_config/gazebo2.yaml':
+        ensure: 'present'
+        content: |
+            name: gazebo2_import
+            method: http://packages.osrfoundation.org/gazebo/ubuntu
+            suites: [saucy, trusty]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% gazebo2-dbg ) | Package (% gazebo2 ) | Package (% libsdformat1) | Package (% libsdformat1-dbg) | Package (% libsdformat-dev) | Package (% libtar* )
+    '/home/jenkins-slave/reprepro_config/gazebo.yaml':
+        ensure: 'present'
+        content: |
+            name: gazebo
+            method: http://packages.osrfoundation.org/gazebo/ubuntu
+            suites: [precise, quantal, raring, saucy]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% gazebo-dbg ) | Package (% gazebo ) | Package (% sdformat)
+    '/home/jenkins-slave/reprepro_config/colladadom.yaml':
+        ensure: 'present'
+        content: |
+            name: colladadomppa
+            #Switching to testing for newer colladadom
+            #method: http://ppa.launchpad.net/openrave/release/ubuntu
+            #suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty]
+            method: http://ppa.launchpad.net/openrave/testing/ubuntu
+            suites: [saucy, trusty]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% *collada-dom* )
+
 
 
 
