--- a/slave/common.yaml
+++ b/slave/common.yaml
@@ -1,7 +1,7 @@
 jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://master:8080'
-jenkins::slave::num_executors: 1
+jenkins::slave::num_executors: 2
 
 # master::ip: 54.67.30.249
 # repo::ip: 54.67.51.1
@@ -15,4 +15,4 @@ ssh_keys:
 autoreconfigure: true
 autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin master && git reset --hard origin/master && ./reconfigure.bash slave"'
 
-run_squid: true
+run_squid: false
