--- a/repo/common.yaml
+++ b/repo/common.yaml
@@ -268,6 +268,16 @@ jenkins-slave::reprepro_config:
             component: main
             architectures: [i386, amd64, source]
             filter_formula: Package (% *collada-dom* )
+    '/home/jenkins-slave/reprepro_config/libopenni.yaml':
+        ensure: 'present'
+        content: |
+            name: libopenni
+            method: http://ppa.launchpad.net/v-launchpad-jochen-sprickerhof-de/pcl/ubuntu
+            # Import libopenni from pcl ppa for saucy. It's upstream in trusty and higher.
+            suites: [saucy]
+            component: main
+            architectures: [i386, amd64, source]
+            filter_formula: Package (% libopenni* ) | Package (== openni-utils)
 
 
 
