adding example hiera_include classes for newrelic sysmond

--- a/slave/common.yaml
+++ b/slave/common.yaml
@@ -16,3 +16,10 @@ autoreconfigure: true
 autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin master && git reset --hard origin/master && ./reconfigure.bash slave"'
 
 run_squid: false
+
+# classes to be pulled in via hiera_include classes
+# classes:
+#   - nrsysmond
+
+# License key required for nrsysmond class above
+# nrsysmond::license_key: xxxyyyyzzzzTODO_REQUIRED
