default to use lts version of jenkins

--- a/master/common.yaml
+++ b/master/common.yaml
@@ -15,6 +15,7 @@ credentials::jenkins-slave::id: 1e7d4696-7fd4-4bc6-8c87-ebc7b6ce16e5
 credentials::jenkins-slave::passphrase: 4lRsx/NwfEndwUlcWOOnYg==
 
 jenkins::nodeMonitor::minimum_disk_space: 10G
+jenkins::lts: true
 
 ssh_keys:
     'tfoote@zug':
