add a note about jenkins_java_args

--- a/master/common.yaml
+++ b/master/common.yaml
@@ -14,6 +14,11 @@ credentials::jenkins-slave::username: jenkins-slave
 credentials::jenkins-slave::id: 1e7d4696-7fd4-4bc6-8c87-ebc7b6ce16e5
 credentials::jenkins-slave::passphrase: 4lRsx/NwfEndwUlcWOOnYg==
 
+# Uncomment below to increase the memory available for Jenkins
+# This is highly recommended for larger deployments
+# Don't use more than 75% of your RAM for Jenkins
+# jenkins_java_args: '-XX:MaxPermSize=512m -Xmx20g'
+
 jenkins::nodeMonitor::minimum_disk_space: 10G
 jenkins::lts: true
 
