--- a/repo/common.yaml
+++ b/repo/common.yaml
@@ -110,21 +110,21 @@ ssh_keys:
 jenkins-slave::reprepro_updater_config: |
     [ubuntu_building]
     architectures: amd64 arm64 armhf i386 source
-    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial jessie wheezy
+    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety jessie wheezy
     repository_path: /var/repos/ubuntu/building
     signing_key: 'E5944336 0776D936'
     upstream_config: /home/jenkins-slave/reprepro_config
 
     [ubuntu_testing]
     architectures: amd64 arm64 armhf i386 source
-    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial jessie wheezy
+    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety jessie wheezy
     repository_path: /var/repos/ubuntu/testing
     signing_key: 'E5944336 0776D936'
     upstream_config: /home/jenkins-slave/reprepro_config
 
     [ubuntu_main]
     architectures: amd64 arm64 armhf i386 source
-    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial jessie wheezy
+    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety jessie wheezy
     repository_path: /var/repos/ubuntu/main
     signing_key: 'E5944336 0776D936'
     upstream_config: /home/jenkins-slave/reprepro_config
@@ -135,7 +135,7 @@ jenkins-slave::reprepro_config:
         content: |
             name: ros_bootstrap
             method: http://repos.ros.org/repos/ros_bootstrap
-            suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty, utopic, vivid, wily, xenial, jessie, wheezy]
+            suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty, utopic, vivid, wily, xenial, yakkety, jessie, wheezy]
             component: main
             architectures: [i386, amd64, arm64, armel, armhf, source]
             # filter_formula: Package (% python* )
