--- a/master/common.yaml
+++ b/master/common.yaml
@@ -2,7 +2,7 @@ jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://master:8080'
 
-# master::ip: 54.67.30.249
+master::ip: 172.23.3.115
 # repo::ip: 54.67.51.1
 
 user::admin::name: admin
