--- a/slave/common.yaml
+++ b/slave/common.yaml
@@ -3,8 +3,8 @@ jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://master:8080'
 jenkins::slave::num_executors: 2
 
-# master::ip: 54.67.30.249
-# repo::ip: 54.67.51.1
+master::ip: 192.168.100.231
+repo::ip: 192.168.254.194
 
 ssh_keys:
     'tfoote@zug':
