--- a/master/common.yaml
+++ b/master/common.yaml
@@ -2,8 +2,8 @@ jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
 jenkins::slave::masterurl: 'http://192.168.100.231:8080'
 
-master::ip: 192.168.100.231
-repo::ip: 192.168.100.194
+master::ip: 192.168.100.235
+#repo::ip: 192.168.100.194
 
 user::admin::name: admin
 
