These affect the jenkins::slave component module directly.
They got caught up in the slave->agent rename but can't be redone yet.

--- a/slave/common.yaml
+++ b/slave/common.yaml
@@ -1,7 +1,7 @@
-jenkins::agent::ui_user: 'admin'
-jenkins::agent::ui_pass: 'changeme'
-jenkins::agent::masterurl: 'http://master:8080'
-jenkins::agent::num_executors: 2
+jenkins::slave::ui_user: 'admin'
+jenkins::slave::ui_pass: 'changeme'
+jenkins::slave::masterurl: 'http://master:8080'
+jenkins::slave::num_executors: 2
 
 master::ip: 192.168.100.212
 #repo::ip: 192.168.254.194
