--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -1,18 +1,9 @@
 jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
-jenkins::slave::masterurl: 'http://192.168.100.231:8080'
+jenkins::slave::masterurl: 'http://master:8080'
 
 master::ip: 192.168.100.212
-#repo::ip: 192.168.100.194
-
-user::admin::name: admin
-
-user::admin::password_hash: '#jbcrypt:$2a$10$vmmqzRmcDHj1t9Ajgq5edekPD8cbpD./pBSGcYzia.OsIroOKjghm'
-
-
-credentials::jenkins-slave::username: jenkins-slave
-credentials::jenkins-slave::id: 1e7d4696-7fd4-4bc6-8c87-ebc7b6ce16e5
-credentials::jenkins-slave::passphrase: 4lRsx/NwfEndwUlcWOOnYg==
+repo::ip: 192.168.100.194
 
 # Uncomment below to increase the memory available for Jenkins
 # This is highly recommended for larger deployments
@@ -65,7 +56,6 @@ jenkins::private_ssh_key: |
 
 
 autoreconfigure: false
-autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin master && git reset --hard origin/master && ./reconfigure.bash master"'
 
 ### Optional customization urls for uploading docs (should match urls in the)
 ### These should match the credentials in the ros_buildfarm_config doc-build.yaml
