--- a/hiera/hieradata/buildfarm_role/repo.yaml
+++ b/hiera/hieradata/buildfarm_role/repo.yaml
@@ -97,21 +97,21 @@ jenkins-agent::gpg_public_key: |
 jenkins-agent::reprepro_updater_config: |
     [ubuntu_building]
     architectures: amd64 arm64 armhf i386 source
-    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty artful wheezy jessie stretch
+    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty artful bionic wheezy jessie stretch
     repository_path: /var/repos/ubuntu/building
     signing_key: E5944336
     upstream_config: /home/jenkins-agent/reprepro_config
 
     [ubuntu_testing]
     architectures: amd64 arm64 armhf i386 source
-    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty artful wheezy jessie stretch
+    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty artful bionic wheezy jessie stretch
     repository_path: /var/repos/ubuntu/testing
     signing_key: E5944336
     upstream_config: /home/jenkins-agent/reprepro_config
 
     [ubuntu_main]
     architectures: amd64 arm64 armhf i386 source
-    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty artful wheezy jessie stretch
+    distros: lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty artful bionic wheezy jessie stretch
     repository_path: /var/repos/ubuntu/main
     signing_key: E5944336
     upstream_config: /home/jenkins-agent/reprepro_config
@@ -122,7 +122,7 @@ jenkins-agent::reprepro_config:
         content: |
             name: ros_bootstrap
             method: http://repos.ros.org/repos/ros_bootstrap
-            suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty, utopic, vivid, wily, xenial, yakkety, zesty, artful,
+            suites: [lucid, maverick, natty, oneiric, precise, quantal, raring, saucy, trusty, utopic, vivid, wily, xenial, yakkety, zesty, artful, bionic,
                      wheezy, jessie, stretch]
             component: main
             architectures: [i386, amd64, arm64, armel, armhf, source]
