--- a/hiera/hieradata/common.yaml
+++ b/hiera/hieradata/common.yaml
@@ -8,8 +8,8 @@ jenkins::slave::ui_pass: 'changeme'
 # This should be unchanged so that the masterurl always uses the hosts entry to reach master.
 jenkins::slave::masterurl: 'http://master:8080'
 
-master::ip: 172.30.1.145
-repo::ip: 172.30.1.69
+master::ip: 172.30.1.94
+repo::ip: 172.30.1.114
 
 # change this to match the timezone that this buildfarm is located in.
 timezone: 'America/Los_Angeles'
@@ -28,7 +28,7 @@ ssh_keys:
 # any configuration changes made since provisioning.
 autoreconfigure: false
 # Pay special attention to the Git branch name that appears twice in the invocation below.
-autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin xenialize && git reset --hard origin/xenialize && ./reconfigure.bash"'
+autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin deployment/2018-02-23 && git reset --hard origin/deployment/2018-02-23 && ./reconfigure.bash"'
 
 # This docker option is being removed from the upstream puppetlabs-docker module.
 # It isn't required on Ubuntu Xenial and causes an error when deploying to AWS with the default AWS kernel.
