Specify the version of the swarm plugin to use.
The swarm plugin is installed by the jenkins puppet module and isn't
governed by the rosplugins.pp manifest file in buildfarm_deployment.
Setting it once with a YAML anchor and referencing it makes it less
likely to drift when updating.

--- a/hiera/hieradata/common.yaml
+++ b/hiera/hieradata/common.yaml
@@ -4,6 +4,10 @@
 # If you use the GitHub authentication plugin with Jenkins you will want to set this to a GitHub username and access token.
 jenkins::slave::ui_user: 'admin'
 jenkins::slave::ui_pass: 'changeme'
+# The version of the swarm client plugin should be the same between the jenkins master and agents on all hosts.
+# Note that versions above 3.0 require use of a modified version of the docker puppet module
+jenkins::swarm_version: &jenkins_swarm_version '3.14'
+jenkins::slave::version: *jenkins_swarm_version
 
 # This should be unchanged so that the masterurl always uses the hosts entry to reach master.
 jenkins::slave::masterurl: 'http://master:8080'
