Use pre-jep-200 branch of buildfarm_deployment_config.

--- a/hiera/hieradata/common.yaml
+++ b/hiera/hieradata/common.yaml
@@ -67,7 +67,7 @@ ssh_host_keys:
 # any configuration changes made since provisioning.
 autoreconfigure: false
 # Pay special attention to the Git branch name that appears twice in the invocation below.
-autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin xenialize && git reset --hard origin/xenialize && ./reconfigure.bash"'
+autoreconfigure::command: 'bash -c "cd /root/buildfarm_deployment_config && git fetch origin pre-jep-200 && git reset --hard origin/pre-jep-200 && ./reconfigure.bash"'
 
 # This docker option is being removed from the upstream puppetlabs-docker module.
 # It isn't required on Ubuntu Xenial and causes an error when deploying to AWS with the default AWS kernel.
